<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geometrica2.TrianguloActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"> </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/triangulo"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"> </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/triangulo"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/tomato"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:text="@string/base"
            android:layout_marginLeft="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eBase"
            android:textStyle="italic"
            android:hint="@string/base2"
            android:layout_marginRight="30dp"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:text="@string/altura"
            android:layout_marginLeft="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eAltura"
            android:textStyle="italic"
            android:hint="@string/altura2"
            android:layout_marginRight="30dp"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:text="@string/recomendacion"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"> </LinearLayout>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/calcular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/tomato"
            android:onClick="CalcularTriangulo"
            android:id="@+id/bTriangulo"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"> </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tTriangulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.8"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="25sp" />
</LinearLayout>
